# orga_1

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-backend.yml  ci-frontend.yml
.storybook/: main.ts  preview.ts
PS1/: audit_all.ps1  be_seed.ps1  dev_down.ps1  dev_up.ps1  fe_build.ps1  fe_dev.ps1  fe_lint.ps1  fe_test.ps1  init_repo.ps1  lint_all.ps1  smoke.ps1  test_all.ps1
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: audit.py  cli.py  config.py  db.py  deps.py  errors.py  logging_utils.py  main.py  middleware.py  models.py  rate_limit.py  schemas.py  security.py
backend/app/api/v1/: auth.py  availabilities.py  conflicts.py  missions.py  router.py  users.py
backend/tests/: conftest.py  test_admin_crud.py  test_auth_flow.py  test_availability_crud.py  test_cli.py  test_conflicts_detection.py  test_errors.py  test_health.py  test_mission_validations.py  test_missions_crud.py  test_rate_limit_login.py  test_request_id.py  test_smoke.py  test_stress_availabilities.py
docs/: roadmap.md
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts  api_availabilities.ts  api_missions.ts  auth.ts
frontend/src/pages/: Calendar.tsx  Health.a11y.test.tsx  Health.stories.tsx  Health.test.tsx  Health.tsx  Home.tsx  Login.tsx  MissionDetails.tsx  Missions.tsx  Profile.tsx  Register.tsx
(+5 files in other folders)
