[project]
name = "ccw-backend"
version = "0.0.0"
description = "Bootstrap backend skeleton"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E","F","I","B"]
extend-exclude = ["*.venv","venv"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
