[project]
name = "ccw-backend"
version = "0.1.0"
description = "CCW backend minimal (Jalon 1)"
requires-python = ">=3.12"

[project.scripts]
# Installation optionnelle; tests importent directement app.cli
cc = "app.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E","F","I","B"]
extend-exclude = ["*.venv","venv"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

