[project]
name = "ccw-backend"
version = "0.1.0"
description = "CCW backend minimal (Jalon 1)"
requires-python = ">=3.12"

[project.scripts]
# Installation optionnelle; tests importent directement app.cli
cc = "app.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
extend-exclude = ["*.venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E266", "B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "app"]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true

